<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.laporan.LaporanKeuangan">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_6sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_18sdp"
                    android:text="@string/laporan_keuangan"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/_6sdp"
                    android:background="@color/blue_700"
                    android:layout_marginBottom="@dimen/_18sdp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_6sdp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="4">
                        <LinearLayout
                            android:layout_width="1dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/t_harian"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/harian"
                                android:textSize="@dimen/_12sdp"/>
                            <View
                                android:id="@+id/v_harian"
                                android:layout_width="match_parent"
                                android:layout_marginHorizontal="@dimen/_20sdp"
                                android:background="@color/blue_700"
                                android:visibility="gone"
                                android:layout_height="2dp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="1dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/t_mingguan"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/mingguan"
                                android:textSize="@dimen/_12sdp"/>
                            <View
                                android:id="@+id/v_mingguan"
                                android:layout_width="match_parent"
                                android:layout_marginHorizontal="@dimen/_20sdp"
                                android:background="@color/blue_700"
                                android:visibility="gone"
                                android:layout_height="2dp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="1dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/t_bulanan"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/bulanan"
                                android:textSize="@dimen/_12sdp"/>
                            <View
                                android:id="@+id/v_bulanan"
                                android:layout_width="match_parent"
                                android:layout_marginHorizontal="@dimen/_20sdp"
                                android:background="@color/blue_700"
                                android:layout_height="2dp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="1dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/t_tahunan"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/tahunan"
                                android:textSize="@dimen/_12sdp"/>
                            <View
                                android:id="@+id/v_tahunan"
                                android:layout_width="match_parent"
                                android:layout_marginHorizontal="@dimen/_20sdp"
                                android:background="@color/blue_700"
                                android:visibility="gone"
                                android:layout_height="2dp"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="1dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/pemasukan"
                                android:textStyle="bold"
                                android:textSize="@dimen/_12sdp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="1dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/pengeluaran"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:textSize="@dimen/_12sdp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="1dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/saldo"
                                android:textStyle="bold"
                                android:textSize="@dimen/_12sdp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:src="@drawable/add_white"
            app:backgroundTint="@color/blue_700"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>